# comic-exp

./: .gitignore  README.md  input.txt  pyproject.toml  requirements.txt
comic_exp/: __init__.py  evaluation.py  generation.py  nlp.py  pipeline.py  ui.py
